Testing to see if I can push.

--- a/todo
+++ b/todo
@@ -1,1 +1,1 @@
-need to work out top class/function to settle how often to update. Whether to update between time steps and whether to use future data.
+Need to fix some stuff (vague).
