Getting really close. Have working code. It might be nice to get MPI working, because it takes about 5 minutes to do the processing with 10000 particles, which I still think probably isn't enough. It IS working in 11 dimension space, and that will only go up.

--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 Todo List:
+-convert Dysii to cmake.
+-Normalize timeseries based on the total average, not just for each section.
 -Perform tests to compare estimation of parameters using the average from a section
 as compared to estimation of parameters for all the voxels in the section, with each
 voxel as a state.
