--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 Todo List:
+-Derive an fmri sequence to optimally extract the bold system parameters, may want to 
+ apply maths to the problem.
 -Need to add nifti data to boldgen and fmri_timeseries to define time parameters as well
  as some other misc data.
 -Normalize timeseries based on the total average, not just for each section.
