--- a/todo
+++ b/todo
@@ -1,6 +1,5 @@
 Todo List:
--put particles on the command line
--get mpi working
+-Preprocessing
 -Use maybe faster sampling.
 -Derive an fmri sequence to optimally extract the bold system parameters, may want to 
  apply maths to the problem.
