--- a/todo
+++ b/todo
@@ -12,7 +12,21 @@ Todo List:
 as compared to estimation of parameters for all the voxels in the section, with each
 voxel as a state.
 
-for parameters that are "constant" it might be worth looking at the overall
+Potential improvements
+-for parameters that are "constant" it might be worth looking at the overall
 mean squared error over the entire sequence up to the current time 
 for weighting. This would be O(N^2)
 but we are already at O(PN) and typically P is vastly larger than N.
+    *Cons
+    -Increased complexity
+    -Technically previous states should be carried into the current state
+    through the multiplication of the previous weight with the current one
+
+-Maybe assumptions should be made about the starting location of the 4
+mobile variables. Resting state maybe?
+
+-Switching to exponential increased tracking but resulted in significant 
+    oscillations in the constant variables.
+
+-Maybe somehow treat "const" parameters differently, limit their movement, assume
+no noise in them maybe?
