Added the possibility of starting boldgen at resting state, which seems reasonable. added another idea to the todo list. Fixed gen_input so I don't keep screwing up the levels.

--- a/todo
+++ b/todo
@@ -30,3 +30,5 @@ mobile variables. Resting state maybe?
 
 -Maybe somehow treat "const" parameters differently, limit their movement, assume
 no noise in them maybe?
+
+-Maybe try settling out to different levels of stimuli.
