fixed some sort of stupid problem with git, repo and a little work on presentation.

--- a/doc/presentation/thesis_pres.tex
+++ b/doc/presentation/thesis_pres.tex
@@ -36,9 +36,7 @@
 
 \author{Micah Chambers}
 
-\institute {
-  Bradley Department of Electrical and Computer Engineering\\
-  Virginia Tech University}
+\institute {Virginia Tech Bioimaging Systems Lab}
 
 \subject{Medical Imaging}
 
@@ -67,7 +65,6 @@
 \end{frame}
 
 \section{FMRI Review}
-\subsection{The Bold Response}
 \begin{frame}{The BOLD Response}
 \begin{figure}
 \includegraphics[scale=.23]{model}
@@ -78,21 +75,12 @@
 \end{figure}
 \end{frame}
 
-\begin{frame}{Purpose/Usefullness}
-  \begin{itemize}
-    \item blah
-  \end{itemize}
-\end{frame}
-
 \begin{frame}{BOLD Signal Properties}
   \begin{itemize}
-    \item ...
-    \begin{itemize}
-      \item Exact variables and parameters are unknown and are
-          difficult to calculate.
-      \item Significant Amount of Lag between activation
-          and a measurable output - can be as much as 8 seconds.
-    \end{itemize}
+    \item Exact variables and parameters are unknown and are
+        difficult to calculate.
+    \item Significant Amount of Lag between activation
+        and a measurable output - can be as much as 8 seconds.
     \item Slow Temporal Resolution
     \item Noise characterized by brownian motion
     \item fft of mri signal, with and without DC
