better %diff calculation. BoldPF now uses its own covariance prior. Expweighting added as default. Bold model is a little more verbose.

--- a/doc/presentation/references.bib
+++ b/doc/presentation/references.bib
@@ -27,6 +27,13 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000265938700001}},
 }
 
+@misc{ spm_pipeline,
+Author = {Klaas, Stephan},
+Title = {{General Linear Model}},
+Year = {{2009}},
+url = "http://www.sciencedirect.com/science/article/B6WNP-47DKV9V-2/2/ccfad2db718319db51008a47c71ca54a",
+}
+
 @article{ ISI:000262110200020,
 Author = {Donahue, Manus J. and Stevens, Robert D. and de Boorder, Michiel and
    Pekar, James J. and Hendrikse, Jeroen and van Zijl, Peter C. M.},
@@ -89,7 +96,7 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000246766700003}},
 }
 
-@article{ ISI:000240969200015,
+@article{ comparison,
 Author = {Deneux, Thomas and Faugeras, Olivier},
 Title = {{Using nonlinear models in fMRI data analysis: Model selection and
    activation detection}},
@@ -167,7 +174,7 @@ ISSN = {{0959-4388}},
 Unique-ID = {{ISI:000224721200015}},
 }
 
-@article{ ISI:000189252300007,
+@article{ nonlinearfiltering,
 Author = {Riera, JJ and Watanabe, J and Kazuki, T and Naoki, M and Aubert, E and
    Ozaki, T and Kawashima, R},
 Title = {{A state-space model of the hemodynamic approach: nonlinear filtering of
@@ -183,7 +190,7 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000189252300007}},
 }
 
-@article{ ISI:000174689100014,
+@article{ detrending,
 Author = {Tanabe, J and Miller, D and Tregellas, J and Freedman, R and Meyer, FG},
 Title = {{Comparison of detrending methods for optimal fMRI preprocessing}},
 Journal = {{NEUROIMAGE}},
