little cleanup in bview. more thesis work.

--- a/doc/thesis/references.bib
+++ b/doc/thesis/references.bib
@@ -121,7 +121,7 @@ keywords = "Brain activation",
 keywords = "fMRI"
 }
 
-@article{ ISI:000237239500005,
+@article{ spatial_undershoot,
 Author = {Yacoub, E and Ugurbil, K and Harel, N},
 Title = {{The spatial dependence of the poststimulus undershoot as revealed by
    high-resolution BOLD- and CBV-weighted fMRI}},
@@ -183,20 +183,6 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000189252300007}},
 }
 
-@article{ ISI:000174689100014,
-Author = {Tanabe, J and Miller, D and Tregellas, J and Freedman, R and Meyer, FG},
-Title = {{Comparison of detrending methods for optimal fMRI preprocessing}},
-Journal = {{NEUROIMAGE}},
-Year = {{2002}},
-Volume = {{15}},
-Number = {{4}},
-Pages = {{902-907}},
-Month = {{APR}},
-DOI = {{10.1006/nimg.2002.1053}},
-ISSN = {{1053-8119}},
-Unique-ID = {{ISI:000174689100014}},
-}
-
 @article{smallworld,
 author = {Achard, Sophie and Salvador, Raymond and Whitcher, Brandon and Suckling, John and Bullmore, Ed},
 title = {{A Resilient, Low-Frequency, Small-World Human Brain Functional Network with Highly Connected Association Cortical Hubs}},
@@ -244,7 +230,22 @@ keywords = "Diffusion weighted imaging"
     publisher = {Morgan Kaufmann Publishers Inc.},
     address = {San Francisco, CA, USA},
 }
-
+@article{univ_mult_rft,
+title = "Unified univariate and multivariate random field theory",
+journal = "NeuroImage",
+volume = "23",
+number = "Supplement 1",
+pages = "S189 - S195",
+year = "2004",
+note = "Mathematics in Brain Imaging",
+issn = "1053-8119",
+doi = "DOI: 10.1016/j.neuroimage.2004.07.026",
+url = "http://www.sciencedirect.com/science/article/B6WNP-4D9D8DJ-5/2/52aca4e3b540819e6d11f04f124272e0",
+author = "Keith J. Worsley and Jonathan E. Taylor and Francesco Tomaiuolo and Jason Lerch",
+keywords = "SPMs",
+keywords = "Deformation-based morphometry",
+keywords = "Random field theory"
+}
 
 @article{ drift,
 Author = {Smith, AM and Lewis, BK and Ruttimann, UE and Ye, FQ and Sinnwell, TM
@@ -311,7 +312,7 @@ author = "Valeria Della-Maggiore and Wilkin Chau and Pedro R. Peres-Neto and Ant
 }
 
 
-@article{ ISI:000265938700001,
+@article{ origin_poststim,
 Author = {Chen, Jean J. and Pike, G. Bruce},
 Title = {{Origins of the BOLD post-stimulus undershoot}},
 Journal = {{NEUROIMAGE}},
@@ -419,21 +420,6 @@ keywords = "Brain activation",
 keywords = "fMRI"
 }
 
-@article{ ISI:000237239500005,
-Author = {Yacoub, E and Ugurbil, K and Harel, N},
-Title = {{The spatial dependence of the poststimulus undershoot as revealed by
-   high-resolution BOLD- and CBV-weighted fMRI}},
-Journal = {{JOURNAL OF CEREBRAL BLOOD FLOW AND METABOLISM}},
-Year = {{2006}},
-Volume = {{26}},
-Number = {{5}},
-Pages = {{634-644}},
-Month = {{MAY}},
-DOI = {{10.1038/sj.jcbfm.9600239}},
-ISSN = {{0271-678X}},
-Unique-ID = {{ISI:000237239500005}},
-}
-
 @article{ ISI:000234015300018,
 Author = {Zheng, Y and Johnston, D and Berwick, J and Chen, DM and Billings, S
    and Mayhew, J},
@@ -481,7 +467,7 @@ ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000189252300007}},
 }
 
-@article{ ISI:000174689100014,
+@article{ detrend,
 Author = {Tanabe, J and Miller, D and Tregellas, J and Freedman, R and Meyer, FG},
 Title = {{Comparison of detrending methods for optimal fMRI preprocessing}},
 Journal = {{NEUROIMAGE}},
@@ -493,20 +479,6 @@ Month = {{APR}},
 DOI = {{10.1006/nimg.2002.1053}},
 ISSN = {{1053-8119}},
 Unique-ID = {{ISI:000174689100014}},
-}
-
-@article{ ISI:000080539300008,
-Author = {Smith, AM and Lewis, BK and Ruttimann, UE and Ye, FQ and Sinnwell, TM
-   and Yang, YH and Duyn, JH and Frank, JA},
-Title = {{Investigation of low frequency drift in fMRI signal}},
-Journal = {{NEUROIMAGE}},
-Year = {{1999}},
-Volume = {{9}},
-Number = {{5}},
-Pages = {{526-533}},
-Month = {{MAY}},
-ISSN = {{1053-8119}},
-Unique-ID = {{ISI:000080539300008}},
 }
 
 @inproceedings{ ISI:A1993BZ68P00060,
